# Generic-Compiler

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  windows-toolchain.cmake
.github/workflows/: release.yml
examples/: program.txt  program001.txt  program002.txt  program003.txt  program004.txt
include/: prueba.h
include/code-generator/: CodeGenerator.h  code-generator.h
include/code-generator/components/: CodeBlockGenerator.h  GlobalsGenerator.h  HeaderGenerator.h  SegmentGenerator.h  Triples.h
include/code-generator/components/wasm-generation/: command.h
include/code-generator/components/wat-generation/: WatCodeBlockGenerator.h  WatGlobalsGenerator.h  WatSegmentGenerator.h  wat_instruccions_builders.h  wat_translations.h
include/files/: FileReader.h
include/intermediate-code/: Triples.h
include/lexical-analyzer/: ErrorHandler.h  FileReader.h  LexicalAnalyzer.h  SemanticActions.h  StateMachine.h  States.h  lexical_analyzer.h
include/lexical-analyzer/components/: ReservedWordsTable.h  StateMachine.h  States.h  lexical_tokens.h  macros.h  mapping.h  reserved_words.h  semantic_actions.h  states.h  translator.h
include/lexical-analyzer/semantic-actions/: SemanticAction.h
include/lexical-analyzer/state-machine/: StateMachine.h  States.h
include/lexical-analyzer/translator/: Translator.h
include/semantic-analyzer/: semantic_analyzer.h
include/semantic-analyzer/components/: AssignmentChecker.h  CoertionChecker.h  FunctionChecker.h  InvocationChecker.h  LambdaChecker.h  ProgramChecker.h  ReturnChecker.h  TypeChecker.h  VariableChecker.h
include/syntax-analyzer/: Parser.h  SyntaxAnalyzer.h  a.txt  syntax_analyzer.h
include/syntax-analyzer/components/: Parser.h  parser.h  semantic_actions.h  string_pool.h  translator.h  yacc.y
include/tables/: ConstantLiteralTable.h  ReservedWordsTable.h  SymbolTable.h
include/utils/: CompilerState.h  ErrorBuffer.h  ErrorHandler.h  LiteralTable.h  Log.h  LogHandler.h  ReportHandler.h  SymbolTable.h  globals.h
include/utils/handler-macros/: error_codes.h  warning_codes.h
include/utils/handler-resources/: builders.h  codes.h  mappers.h  message_builder.h
include/utils/resources/: StringBuilderDispatcher.h  StringBuilders.h  builders.h  codes.h  dispatcher.h  macros.h  string_builder_dispatcher.h  types.h
outputs/: index.html
runtime/: index.html
src/: main.cpp
src/code-generator/: CodeGenerator.cpp  code_generator.cpp
src/code-generator/components/: Triples.cpp
src/code-generator/components/wat-generation/: WatCodeBlockGenerator.cpp  WatGlobalsGenerator.cpp  WatSegmentGenerator.cpp  WatTranslatator.cpp  wat_translations.cpp
src/files/: FileReader.cpp
src/intermediate-code/: Triples.cpp
src/lexical-analyzer/: ErrorHandler.cpp  FileReader.cpp  LexicalAnalyzer.cpp  SemanticActions.cpp  StateMachine.cpp  States.cpp  Translator.cpp  lexical_analyzer.cpp
src/lexical-analyzer/components/: ReservedWordsTable.cpp  SemanticActions.cpp  StateMachine.cpp  States.cpp  Translator.cpp  Traps.cpp  reserved_words.cpp  semantic_actions.cpp  states.cpp  translator.cpp  traps.cpp
src/lexical-analyzer/state-machine/: States.cpp
src/lexical-analyzer/translator/: Translator.cpp
src/semantic-analyzer/: SemanticAnalyzer.cpp  functions.cpp  programs.cpp  semantic_analyzer.cpp  variables.cpp
src/semantic-analyzer/components/: AssignmentChecker.cpp  CoertionChecker.cpp  FunctionChecker.cpp  InvocationChecker.cpp  LambdaChecker.cpp  ProgramChecker.cpp  ReturnChecker.cpp  TypeChecker.cpp  VariableChecker.cpp
src/syntax-analyzer/: Parser.cpp  SyntaxAnalyzer.cpp  syntax_analyzer.cpp
src/syntax-analyzer/components/: Parser.cpp  SemanticActions.cpp  StringPool.cpp  Translator.cpp  Traps.cpp  parser.cpp  semantic_actions.cpp  string_pool.cpp  translator.cpp  traps.cpp
src/tables/: ReservedWordsTable.cpp  SymbolTable.cpp
src/utils/: CompilerState.cpp  ErrorBuffer.cpp  ErrorHandler.cpp  LiteralTable.cpp  LogHandler.cpp  ReportHandler.cpp  SymbolTable.cpp  globals.cpp
src/utils/handler-resources/: builders.cpp  mappers.cpp  message_builder.cpp
src/utils/resources/: CodeBuilders.cpp  ErrorBuilders.cpp  ReportBuilders.cpp  StringBuilderDispatcher.cpp  TableBuilders.cpp  TripleBuilders.cpp  dispatcher.cpp  string_builder_dispatcher.cpp  string_builders_codes.cpp  string_builders_errors.cpp  string_builders_report.cpp  string_builders_tables.cpp  string_builders_triple.cpp  string_error_builders.cpp  string_report_builders.cpp  string_table_builders.cpp
tests/: main.cpp  main_tests.cpp  test_mapping.cpp
tests/environment/: Dockerfile  enviroment_test_runtime.cpp  runner.sh  utilities.js
tests/environment/files/: runtime_integer_underflow.expected  runtime_integer_underflow.txt  runtime_recursive_call.expected  runtime_recursive_call.txt  runtime_zero_division.expected  runtime_zero_division.txt
tests/files/: TestFileReader.cpp
tests/integration/code-generation/files/: code_assignments.txt  code_control.txt  code_functions.txt
tests/integration/code-generation/test-cases/: code_test_assignments.cpp  code_test_control.cpp  code_test_functions.cpp
tests/integration/fixture/: CompilerTest.cpp  CompilerTest.h
tests/integration/lexical-syntax/files/: errors.txt
tests/integration/parser-lexer/files/: assignments.txt  declarations.txt  do_while.txt  expressions.txt  if_else.txt  invocations.txt  nuke.txt  syntax_assignments.txt  syntax_invocations.txt  syntax_programs.txt
tests/integration/parser-lexer/fixture/: TestParserLexer.cpp  TestParserLexer.h
tests/integration/parser-lexer/test-cases/: assignments_test.cpp  declarations_test.cpp  do_while_test.cpp  expressions.cpp  (+11 more)
tests/lexical-analyzer/: TestFileReader.cpp  TestLexicalAnalyzer.cpp  TestSemanticActions.cpp  TestStates.cpp  TestTranslator.cpp
tests/tables/: TestSymbolTable.cpp
tests/translator/: TestTranslator.cpp
tests/unit/lexical-analyzer/: lexical_analyzer_test.cpp
tests/unit/utils/: ErrorHandler_test.cpp  LiteralTable_test.cpp  LogHandler_test.cpp  ReportHandler_test.cpp  SymbolTable_test.cpp  test_symbol_table.cpp
(+57 files in other folders)
